--- a/frontend/src/pages/Home/Register.scss
+++ b/frontend/src/pages/Home/Register.scss
@@ -44,8 +44,19 @@ $fa-font-path : "~@fortawesome/fontawesome-free-webfonts/webfonts";
             }
             
             .register-input {
-                margin: 6px 0;
-
+                margin: 7px 0;
+                // padding-left: 5px;
+                // height: 30px;
+                // width: 80px;
+                input {
+                    height: 38px;
+                    width: 97%;
+                    border-radius: 10px;
+                    font-size: 15px;
+                    border:solid 1px #ccc; 
+                    margin: 3px;
+                    text-indent: 10px;
+                }
                 .costum-input-pw {
                     position: relative;
                     i {
@@ -64,14 +75,14 @@ $fa-font-path : "~@fortawesome/fontawesome-free-webfonts/webfonts";
                         cursor: pointer;
                     }
                 }
-                .costum-input-phone {
-                    position: relative;
-                    i {
-                        position: absolute;
-                        right:25px;
-                        top:2px;
-                    }
-                }
+                // .costum-input-phone {
+                //     position: relative;
+                //     i {
+                //         position: absolute;
+                //         right:25px;
+                //         top:2px;
+                //     }
+                // }
             }
 
             .btn-register {
@@ -98,7 +109,7 @@ $fa-font-path : "~@fortawesome/fontawesome-free-webfonts/webfonts";
                 font-size:17px;
                 .icon {
                     margin-top: 2px;
-                    margin-left: 30px;
+                    margin-left: 27px;
                 .google {
                     font-size:  30px;
                     height: 40px;
@@ -108,7 +119,7 @@ $fa-font-path : "~@fortawesome/fontawesome-free-webfonts/webfonts";
                     justify-content: center;
                     color: white;
                     margin-left: 20%;
-                    margin-bottom: 65px;
+                    margin-bottom:45px;
                 }
                 .facebook {
                     font-size:  30px;
@@ -119,7 +130,7 @@ $fa-font-path : "~@fortawesome/fontawesome-free-webfonts/webfonts";
                     justify-content: center;
                     color: white;
                     margin-left: 20%;
-                    margin-bottom: 30px;
+                    margin-bottom: 18px;
                 }}
             }
         }
