--- a/frontend/src/pages/Register/Register.scss
+++ b/frontend/src/pages/Register/Register.scss
@@ -1,5 +1,3 @@
-
-
 .register-background {
     height: 100vh;
     background: linear-gradient(135deg, #a55eea 0%, #4b7bec 100%);
@@ -40,8 +38,19 @@
             }
             
             .register-input {
-                margin: 6px 0;
-
+                margin: 7px 0;
+                // padding-left: 5px;
+                // height: 30px;
+                // width: 80px;
+                input {
+                    height: 38px;
+                    width: 97%;
+                    border-radius: 10px;
+                    font-size: 15px;
+                    border:solid 1px #ccc; 
+                    margin: 3px;
+                    text-indent: 10px;
+                }
                 .costum-input-pw {
                     position: relative;
                     i {
@@ -60,14 +69,14 @@
                         cursor: pointer;
                     }
                 }
-                .costum-input-phone {
-                    position: relative;
-                    i {
-                        position: absolute;
-                        right:25px;
-                        top:2px;
-                    }
-                }
+                // .costum-input-phone {
+                //     position: relative;
+                //     i {
+                //         position: absolute;
+                //         right:25px;
+                //         top:2px;
+                //     }
+                // }
             }
 
             .btn-register {
@@ -94,7 +103,7 @@
                 font-size:17px;
                 .icon {
                     margin-top: 2px;
-                    margin-left: 30px;
+                    margin-left: 27px;
                 .google {
                     font-size:  30px;
                     height: 40px;
@@ -104,7 +113,7 @@
                     justify-content: center;
                     color: white;
                     margin-left: 20%;
-                    margin-bottom: 65px;
+                    margin-bottom:45px;
                 }
                 .facebook {
                     font-size:  30px;
@@ -115,7 +124,7 @@
                     justify-content: center;
                     color: white;
                     margin-left: 20%;
-                    margin-bottom: 30px;
+                    margin-bottom: 18px;
                 }}
             }
         }
