--- a/frontend-version2/src/components/DropDownAvt/DropDownAvt.css
+++ b/frontend-version2/src/components/DropDownAvt/DropDownAvt.css
@@ -1,12 +1,4 @@
-ul{
-    list-style: none;
-  }
-  
-  a {
-    text-decoration: none;
-  }
-  
-  .menu-trigger img{
+  .img-avt{
     position: absolute;
     top: 10px;
     right: 20px;
@@ -15,119 +7,35 @@ ul{
     border-radius: 50%;
     overflow: hidden;
     cursor: pointer;
+  
+  }
 
+  .img-logout{
+    top: 10px;
+    height: 40px;
+    width: 50px;
+    overflow: hidden;
+    cursor: pointer;
+    vertical-align: top;
+    margin-inline-start: 50px;
   }
   
+
+
   .dropdown-menu{
+    position: absolute;
     top: 80px;
     right: 20px;
-    background-color: black;
+    background-color: white;
     box-shadow: 0px 0px 6px blue;
-
+    border-radius: 16px;
     border-radius: var(--border-radius);
     padding: 10px 20px;
     width: 200px;
-  }
-  
-  .dropdown-menu::before{
-    content: '';
-    position: absolute;
-    top: -5px;
-    right: 20px;
-    height: 20px;
-    width: 20px;
-    background: var(--secondary-bg);
-    transform: rotate(45deg);
-
-  }
-  
-  .dropdown-menu.active{
-    opacity: 1;
-    visibility: visible;
-    transform: translateY(0);
-    transition: var(--speed) ease;
-
-  }
-  
-  .dropdown-menu.inactive{
-    opacity: 0;
-    visibility: hidden;
-    transform: translateY(-20px);
-    transition: var(--speed) ease;
- 
-  }
-  
-  
-  h3{
-    width: 100%;
-    text-align: center;
-    font-size: 18px;
-    padding: 20px 0;
-    font-weight: 500;
-    font-size: 18px;
-    color: var(--primary-text-color);
-    line-height: 1.2rem;
- 
-  }
-  
-  h3 span{
-    font-size: 14px;
-    color: var(--secondary-text-color);
-    font-weight: 400;
-
-  }
-  
-  .dropdown-menu ul li{
-    padding: 10px  0;
-    margin-inline-end: 35px;
-    border-top: 1px solid rgba(0, 0, 0, 0.05);
-    border-color: black;
-  }
-  
-  .dropdown-menu ul li:hover a{
-    color: rgb(212, 33, 9);
-    cursor: pointer;
-    border-color: black;
-  }
-  
-  .dropdown-menu ul li:hover img{
-    opacity: 1;
-    cursor: pointer;
-    border-color: black;
-  }
-  
-  .dropdownItem{
+    height: 60px;
     display: flex;
-    margin: 10px auto;
-    border-color: black;
   }
   
-  .dropdownItem img{
-    max-width: 20px;
-    margin-right: 10px;
-    opacity: 0.5;
-    transition: var(--speed);
-    border-color: black;
+  .dropdown-item{
+    height: 40px;
   }
-  
-  .dropdownItem a{
-    max-width: 100px;
-    margin-left: 10px;
-    transition: var(--speed);
-    border-color: black;
-  }
-
-  .avt-img {
-    position: absolute;
-    top: 10px;
-    height: 50px;
-    width: 50px;
-    border-radius: 50%;
-    overflow: hidden;
-    cursor: pointer;
-    margin-inline-end: 35px;
-    right: 10px;
-}
-.button-logout{
- 
-}
