--- a/frontend/src/pages/Home/Homepage.css
+++ b/frontend/src/pages/Home/Homepage.css
@@ -1,5 +1,6 @@
 
 .background-first {
     background: linear-gradient(  #b8f4ff, #f5f9ff);
+    height: 1000px;
     /* background: linear-gradient( to right, #abbaab , #ffffff); */
 }
