--- a/frontend-version2/src/components/DropDownAvt/DropDownAvt.css
+++ b/frontend-version2/src/components/DropDownAvt/DropDownAvt.css
@@ -28,12 +28,66 @@
     right: 20px;
     background-color: white;
     box-shadow: 0px 0px 6px blue;
-    border-radius: 16px;
+  
     border-radius: var(--border-radius);
     padding: 10px 20px;
     width: 200px;
-    height: 60px;
+    height: 180px;
+  }
+
+  h3{
+    font-size: 18px !important;
+    text-align: center;
+    padding: 20px 0;
+    font-weight: 500;
+    color: var(--primary-text-color);
+    line-height: 1.2rem;
+  
+  }
+
+  h3 span{
+    color: var(--secondary-text-color);
+    font-weight: 400;
+  
+  }
+  
+
+  .dropdown-menu ul li{
+    padding: 10px  0;
+    margin-inline-end: 35px;
+    border-top: 1px solid rgba(0, 0, 0, 0.05);
+    border-color: black;
+  }
+
+
+  .dropdown-menu ul li:hover img{
+    opacity: 1;
+    cursor: pointer;
+    border-color: black;
+  }
+
+  .dropdownItem{
     display: flex;
+    margin: 10px auto;
+    border-color: black;
+    align-items: center;
+  }
+  
+  .dropdownItem img{
+    max-width: 30px;
+    height: 30px;
+    margin-right: 10px;
+    opacity: 0.5;
+    transition: var(--speed);
+    border-color: black;
+  }
+  
+  .dropdownItem a{
+    max-width: 100px;
+    margin-left: 10px;
+    transition: var(--speed);
+    border-color: black;
+    cursor: pointer;
   }
   
   .dropdown-item{
