--- a/frontend-version2/src/pages/Login/Login.css
+++ b/frontend-version2/src/pages/Login/Login.css
@@ -19,7 +19,7 @@
 .full-screen{
     width: 100%;
     height: 800px;
-    background-color: black;
+    background: linear-gradient(135deg, #a55eea 0%, #4b7bec 100%);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -42,7 +42,7 @@
 
 .input-text{
     background-color: transparent;
-    border: none;
+    border: none !important;
     outline: none;
     width: 100%;
     height: 30px;
