--- a/frontend-version2/src/pages/Login/Login.scss
+++ b/frontend-version2/src/pages/Login/Login.scss
@@ -1,4 +1,4 @@
-.register-background {
+.login-background {
     position:absolute;
     height: 100vh;
     width: 100vw;
@@ -19,7 +19,7 @@
         height: 520px;
         
       }
-    .register-container {
+    .login-container {
         width: 400px;
         border-radius: 10px;
         background-color: white;
@@ -30,12 +30,12 @@
         bottom:0;
         right: 0;
         left:0;
-        height: 460px;
+        height: 357px;
 
-        .register-content {
+        .login-content {
             padding: 10px;
  
-            .text-register {
+            .text-login {
                 text-align: center;
                 font-weight: 600;
                 font-size: 24px;
@@ -43,7 +43,7 @@
                 padding-bottom: 5px;
             }
             
-            .register-input {
+            .login-input {
                 margin: 7px 0;
                 input {
                     height: 38px;
@@ -76,7 +76,7 @@
                 }
             }
 
-            .btn-register {
+            .btn-login {
                 width: 100%;
                 margin: 10px 0;
                 height: 30px;
@@ -98,11 +98,11 @@
                 }
 
             }
-            .text-other-register {
+            .text-other-login {
                 font-size: 18px;
                 text-align: center;
             }
-            .social-register { 
+            .social-login { 
                 display: flex;
                 text-align: center;
                 justify-content: center;
