--- a/frontend-version2/src/pages/Login/Login.scss
+++ b/frontend-version2/src/pages/Login/Login.scss
@@ -99,8 +99,9 @@
 
             }
             .text-other-login {
-                font-size: 18px;
+                font-size: 16px;
                 text-align: center;
+                margin-top: 5px;
             }
             .social-login { 
                 display: flex;
