--- a/frontend-version2/src/pages/Register/Register.scss
+++ b/frontend-version2/src/pages/Register/Register.scss
@@ -99,8 +99,9 @@
 
             }
             .text-other-register {
-                font-size: 18px;
+                font-size: 16px;
                 text-align: center;
+                margin-top: 5px;
             }
             .social-register { 
                 display: flex;
