--- a/frontend-version2/src/components/ui/Modal2/modal2.css
+++ b/frontend-version2/src/components/ui/Modal2/modal2.css
@@ -14,6 +14,7 @@
   left: 50%;
   width: 500px;
   height: 575px;
+  margin-bottom:0;
   transform: translate(-50%, -50%);
   background: #343444 !important;
   border-radius: 5px;
