--- a/frontend-version2/src/components/ui/Live-auction/live-auction.css
+++ b/frontend-version2/src/components/ui/Live-auction/live-auction.css
@@ -1,12 +1,53 @@
 .single__nft__card {
-  padding: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 20px;
+  padding-top: 20px;
   background: #343444;
   border-radius: 10px;
+}
+
+/* a .fl .far {
+  position: relative;
+  top: 23px;
+  left: 94%;
+  color: #fff;
+  cursor: pointer;
+} */
+/* 
+.fl .fas {
+  position: relative;
+  top: 0px;
+  left: 96%;
+  padding-top: 15px;
+  padding-bottom: 10px; 
+  color: rgb(244, 0, 0);
+  cursor: pointer;
+} */
+.fl .fas {
+  position: relative;
+  top: 365px;
+  left: 86%;
+  padding-top: 12px;
+  padding-bottom: 8px; 
+  color: rgb(244, 0, 0);
+  cursor: pointer;
+} 
+.unfl .fas {
+  position: relative;
+  top: 365px;
+  left: 86%;
+  padding-top: 12px;
+  padding-bottom: 8px; 
+  color: rgb(154, 154, 154);
+  cursor: pointer;
 }
 
 .nft__img img {
   border-radius: 10px;
   height: 300px;
+  
+  
 }
 
 .nft__img {
@@ -21,6 +62,11 @@
   color: #fff;
   font-size: 1rem;
   text-decoration: none;
+  display:inline-block;
+  width:210px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .nft__title a:hover {
