--- a/frontend-version2/src/pages/Login/Login.scss
+++ b/frontend-version2/src/pages/Login/Login.scss
@@ -10,13 +10,13 @@
         position:absolute;
         margin: auto;
         margin-left:3%;
-        
-        top:0;
+    
+        top:57px;
         bottom:0;
         right: 0;
         left:0;
-        width: 700px;
-        height: 520px;
+        width: 650px;
+        height: 480px;
         
       }
     .login-container {
@@ -26,7 +26,7 @@
         position:absolute;
         margin: auto;
         margin-right: 3%;
-        top:0;
+        top:45px;
         bottom:0;
         right: 0;
         left:0;
@@ -70,7 +70,8 @@
                         position: absolute;
                         height: 25px;
                         width: 25px;
-                        margin-left: 90%;
+                        margin-left: 89%;
+                        margin-bottom: 22px;
                         cursor: pointer;
                     }
                 }
