--- a/frontend-version2/src/pages/Login/Login.scss
+++ b/frontend-version2/src/pages/Login/Login.scss
@@ -10,13 +10,13 @@
         position:absolute;
         margin: auto;
         margin-left:3%;
-    
-        top:57px;
+        
+        top:0;
         bottom:0;
         right: 0;
         left:0;
-        width: 650px;
-        height: 480px;
+        width: 700px;
+        height: 520px;
         
       }
     .login-container {
@@ -26,7 +26,7 @@
         position:absolute;
         margin: auto;
         margin-right: 3%;
-        top:45px;
+        top:0;
         bottom:0;
         right: 0;
         left:0;
@@ -70,8 +70,7 @@
                         position: absolute;
                         height: 25px;
                         width: 25px;
-                        margin-left: 89%;
-                        margin-bottom: 22px;
+                        margin-left: 90%;
                         cursor: pointer;
                     }
                 }
