--- a/frontend-version2/src/pages/Register/Register.scss
+++ b/frontend-version2/src/pages/Register/Register.scss
@@ -5,6 +5,7 @@ $fa-font-path : "~@fortawesome/fontawesome-free-webfonts/webfonts";
 @import "~@fortawesome/fontawesome-free-webfonts/scss/fa-brands.scss";
 
 
+
 .register-background {
     position:absolute;
     height: 100vh;
@@ -17,13 +18,13 @@ $fa-font-path : "~@fortawesome/fontawesome-free-webfonts/webfonts";
         position:absolute;
         margin: auto;
         margin-left:3%;
-    
-        top:57px;
+        
+        top:0;
         bottom:0;
         right: 0;
         left:0;
-        width: 650px;
-        height: 480px;
+        width: 700px;
+        height: 520px;
         
       }
     .register-container {
@@ -33,7 +34,7 @@ $fa-font-path : "~@fortawesome/fontawesome-free-webfonts/webfonts";
         position:absolute;
         margin: auto;
         margin-right: 3%;
-        top:45px;
+        top:0;
         bottom:0;
         right: 0;
         left:0;
@@ -77,8 +78,7 @@ $fa-font-path : "~@fortawesome/fontawesome-free-webfonts/webfonts";
                         position: absolute;
                         height: 25px;
                         width: 25px;
-                        margin-left: 89%;
-                        margin-bottom: 22px;
+                        margin-left: 90%;
                         cursor: pointer;
                     }
                 }
