--- a/frontend-version2/src/components/ui/Live-auction/live-auction.css
+++ b/frontend-version2/src/components/ui/Live-auction/live-auction.css
@@ -6,6 +6,15 @@
   background: #343444;
   border-radius: 10px;
 }
+.style-buyed{
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 20px;
+  padding-top: 20px;
+  background: #343444;
+  border-radius: 10px;
+  display: none;
+}
 
 /* a .fl .far {
   position: relative;
